--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -183,11 +183,18 @@ th .link                      {font-size:0.8em;float:right;margin-top:.2em;}
 .for_slots																	{padding:20px 0;}
 .for_slots table 														{background-color:#fff;margin:0 1%;width:98%;border-collapse:collapse;border:none;}
 .for_slots table.header											{margin:10px 1% 0;}
-.for_slots table td													{border:none;border:solid 1px #ccc;vertical-align:top;width:20%;}
-.for_slots table td.skills									{background-color:#ddd;font-weight:bold;}
+.for_slots table td													{border:none;border:solid 1px #ccc;vertical-align:top;width:28%;}
+.for_slots table td.skills									{background-color:#ddd;font-weight:bold;width:16%;}
 .for_slots table.header td									{background-color:#ccc;font-weight:bold;}
 .for_slots table td.blank										{background-color:#fff;border:1px solid #fff;}
 .for_slots table td.cell ul									{padding:0;margin:0;list-style-type:none;}
+.for_slots table td select									{height:150px;}
+
+.picker											{margin:0 0 5px 0;}
+.picker	td									{padding:0;}
+.picker td.center						{width:1%;padding:5px;}						
+.picker input								{margin:0;padding:0;font-size:8px;font-weight:bold;}
+.picker select							{height:120px;width:150px;}
 
 #sidebar .listing 								{padding:0;margin:0;}
 #sidebar .listing table td 				{border-bottom-color:#dedede;}
